siril 1.4.0-beta2
XX/XX/25

**Fixes:**
* Fixes option -weight= for stack command and add filtering criteria in HISTORY key of stacked image (#1545)
* Fixes crash when refreshing the scripts list (#1548)
* Immplement a better linear regression algorithm for SPCC (!853)

**Improvements:**
* Scripts can be opened in the editor directly from the Script Preferences treeview (#1556, !860)


siril 1.4.0-beta1
04/26/25

**New features:**
* Added support for unknown keywords with path parsing (#1333)
* Added support for JPEG XL image format
* Added comparison star list creation from Siril (!381)
* Added intensity profiling function (#5)
* Added internal plotting tool (siril_plot) to be used with profiling and light_curves (removed usage of GNUplot) (!543 !545)
* Added git script repository integration (!560)
* Added ROI processing for certain functions (!571, fixes #1098 and #1188)
* Added fully color managed workflow using ICC profiles (!542, fixes #1010, #1207)
* Added command conesearch (replaces nomad and solsys), including support for new catalogues (vsx, gcvs, exo, aavso_chart) (!579, #1171)
* Added AAVSO photometry file format output and improving photometry UI (#1234)
* Added color management to photometric color calibration, and SPCC as a new method. (!598)
* Added solving with distortions using SIP convention and handling writing related keywords in the header (!612 and #1154::3)
* Added full blindsolve with Astrometry.net (#1154::5 and !636)
* Added Astrometric Registration for mosaic and little overlapping sequences (#1154::7 and !643)
* Added image undistortion using WCS SIP data during registration (#1154::8,!643 and #1285)
* Refactored wcs usage, by removing redundant info stored in the fit structure (!591 and #1154::1)
* Added support for offline Gaia catalogue extracts with HEALpixel-based indexing (!795, !797)
* Added master distortion files (!686)
* Added ssl certificates in the appimage (#1259)
* Added dark scaling to match exposure time (#1269)