@@ -5,6 +5,7 @@ XX/XX/25
 * Fixes option -weight= for stack command and add filtering criteria in HISTORY key of stacked image (#1545)
 * Fixes crash when refreshing the scripts list (#1548)
 * Immplement a better linear regression algorithm for SPCC (!853)
+* Python scripts are now sorted alphabetically (#1559)
 
 **Improvements:**
 * Scripts can be opened in the editor directly from the Script Preferences treeview (#1556, !860)
